--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ DOI: 'xxxx.xxx/'
 # Note - if you enable this, and attempt to view your site locally you have to use the baseurl in your local path.
 # Example, you must use http://localhost:4000/path/to/journal
 #baseurl: /path/to/journal 
-baseurl:
+baseurl: /jekyll-journal
 
 # Media server - to store your big media files outside this repo if you need to
 media_server: "http://your.media.server/"
