citation generator debug

--- a/_data/feature/feature2.yml
+++ b/_data/feature/feature2.yml
@@ -1,6 +1,6 @@
 - name: tag1
   url: item4.html
-  author: "An author"
+  author: "Liu Yang"
   title: "Short title"
   fulltitle: "Long title"
   abstract:  |-
