--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ DOI: 'xxxx.xxx/'
 # Uncomment if you are planning to run the journal in a subdirectory
 # Note - if you enable this, and attempt to view your site locally you have to use the baseurl in your local path.
 # Example, you must use http://localhost:4000/path/to/journal
-#baseurl: /path/to/journal
+baseurl: /website
 
 # Media server - to store your big media files outside this repo if you need to
 media_server: "https://escholarship.org/uc/jsys/"
