all area chairs with email, orcid and twitter handles

--- a/_data/board_DataRepro.yml
+++ b/_data/board_DataRepro.yml
@@ -3,10 +3,11 @@ area: Data Science and Reproducibility
 chairs:
 
 - name: Ivo Jimenez
-  affiliation: 
+  affiliation: UC Santa Cruz
   webpage: https://ivotron.me/
-  orcid: 
-  twitter: 
+  email: ivotron@ucsc.edu
+  orcid: 0000-0002-2222-1985
+  twitter: ivotron
 
 board:
 
