--- a/_data/board_RTCPS.yml
+++ b/_data/board_RTCPS.yml
@@ -3,10 +3,11 @@ area: Real-Time and Cyber-Physical Systems
 chairs:
 
 - name: Sibin Mohan
-  affiliation: 
+  affiliation: University of Illinois at Urbana-Champaign
   webpage: https://sibin.github.io/sibin
-  orcid: 
-  twitter: 
+  email: sibin@illinois.edu
+  orcid: 0000-0002-3295-0233
+  twitter: sibinmohan
 
 board:
 
