--- a/_data/board_SysML_MLSys.yml
+++ b/_data/board_SysML_MLSys.yml
@@ -3,10 +3,11 @@ area: Systems for ML and ML for systems
 chairs:
 
 - name: Neeraja J. Yadwadkar
-  affiliation: 
+  affiliation: Stanford University
   webpage: https://cs.stanford.edu/~neeraja/  
+  emmail: neeraja@cs.stanford.edu
   orcid: 
-  twitter: 
+  twitter: NeerajaJY
 
 board:
 
