--- a/_data/board_WES.yml
+++ b/_data/board_WES.yml
@@ -6,15 +6,15 @@ chairs:
   affiliation: Tu Graz
   webpage: http://www.carloalbertoboano.com/
   email: cboano@tugraz.at
-  orcid: 
+  orcid: 0000-0001-7647-3734
   twitter: 
 
 - name: Pat Pannuto
   affiliation: University of California, San Diego
   webpage: https://patpannuto.com/
   email: ppannuto@ucsd.edu
-  orcid: 
-  twitter: 
+  orcid: 0000-0001-7720-6267
+  twitter: PatPannuto
 
 board:
 
