--- a/_data/board_artifacts.yml
+++ b/_data/board_artifacts.yml
@@ -5,8 +5,9 @@ chairs:
 - name: Eric Eide
   affiliation: University of Utah
   webpage: https://www.cs.utah.edu/~eeide/
-  orcid: 
-  twitter: 
+  email: eeide@cs.utah.edu
+  orcid: 0000-0001-7206-8408
+  twitter: eeide
 
 board:
 
