--- a/_data/board_decentralized.yml
+++ b/_data/board_decentralized.yml
@@ -3,10 +3,11 @@ area: Decentralized Systems
 chairs:
 
 - name: Lefteris Kokoris Kogias
-  affiliation: 
+  affiliation: IST Austria
   webpage: https://lefteriskk.github.io/
-  orcid: 
-  twitter: 
+  email: ekokoris@ist.ac.at
+  orcid: 0000-0002-8827-3382
+  twitter: LefKok
 
 board:
  
