--- a/_data/board_eic.yml
+++ b/_data/board_eic.yml
@@ -5,11 +5,13 @@ list:
 - name: Vijay Chidambaram
   affiliation: University of Texas at Austin and VMware Research
   webpage: https://www.cs.utexas.edu/~vijay/
+  email: vijayc@utexas.edu
   orcid: 0000-0003-4915-6738
-  twitter: '@vj_chidambaram'
+  twitter: vj_chidambaram
 
 - name: Romain Jacob
   affiliation: ETH Zurich
   webpage: https://www.romainjacob.net/
+  email: jacobr@ethz.ch
   orcid: 0000-0002-2218-5750
-  twitter: '@RJacobPartner'
+  twitter: RJacobPartner
