--- a/_data/board_networking.yml
+++ b/_data/board_networking.yml
@@ -3,8 +3,9 @@ area: Networking
 chairs:
 
 - name: Junchen Jiang
-  affiliation: 
+  affiliation: University of Chicago
   webpage: https://people.cs.uchicago.edu/~junchenj/
+  email: junchenj@uchicago.edu
   orcid: 
   twitter: 
 
