--- a/_data/board_streaming.yml
+++ b/_data/board_streaming.yml
@@ -3,10 +3,11 @@ area: Streaming Systems
 chairs:
 
 - name: Vasiliki Kalavri
-  affiliation: 
+  affiliation: Boston University
   webpage: https://cs-people.bu.edu/vkalavri/
+  emmail: vkalavri@bu.edu
   orcid: 
-  twitter: 
+  twitter: vkalavri
 
 board:
 
