--- a/_data/board_edge.yml
+++ b/_data/board_edge.yml
@@ -3,9 +3,10 @@ area: Edge Systems
 chairs:
 
 - name: Richard Mortier
-  affiliation: 
+  affiliation: University of Cambridge
   webpage: https://mort.io/
-  orcid: 
-  twitter: 
+  email: richard.mortier@cl.cam.ac.uk
+  orcid: 0000-0001-5205-5992
+  twitter: mort___
 
 board:
