--- a/_data/areas/wes/board.yml
+++ b/_data/areas/wes/board.yml
@@ -10,7 +10,7 @@ chairs:
   twitter: 
 
 - name: Pat Pannuto
-  affiliation: University of California, San Diego
+  affiliation: University of California San Diego
   webpage: https://patpannuto.com/
   email: ppannuto@ucsd.edu
   orcid: 0000-0001-7720-6267
