--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: JSys
 email: editor@jsys.org
 description: Journal of Systems Research
 baseurl: ""                           # the subpath of your site, e.g. /blog/
-url: "http://jsys.org/" # the base hostname & protocol for your site
+url: "https://www.jsys.org/" # the base hostname & protocol for your site
 twitter_username: jsysresearch
 github_username:  jsysresearch
 
