--- a/_data/areas/decentralized/board.yml
+++ b/_data/areas/decentralized/board.yml
@@ -48,7 +48,7 @@ members:
   twitter: 
 
 - name: Carlos Baquero
-  affiliation: University of Minho
-  webpage: 
+  affiliation: University of Porto
+  webpage: https://cbaquero.github.io/web/
   orcid: 
   twitter:
