--- a/_data/areas/rt_cps/board.yml
+++ b/_data/areas/rt_cps/board.yml
@@ -3,9 +3,9 @@ area: Real-Time and Cyber-Physical Systems
 chairs:
 
 - name: Sibin Mohan
-  affiliation: University of Illinois at Urbana-Champaign
+  affiliation: Oregon State University
   webpage: https://sibin.github.io/sibin
-  email: sibin@illinois.edu
+  email: sibin.mohan@oregonstate.edu
   orcid: 0000-0002-3295-0233
   twitter: sibinmohan
 
