--- a/_data/openReview.yml
+++ b/_data/openReview.yml
@@ -1,5 +1,15 @@
 forums:
 
+- title: Feb. 2022 - Paper 
+  open: 1
+  show: 1
+  url: https://openreview.net/group?id=JSYS/2022/Feb_Papers
+
+- title: Feb. 2022 - Aritfact 
+  open: 1
+  show: 1
+  url: https://openreview.net/group?id=JSYS/2022/Feb_Artifacts
+
 - title: Nov. 2021 - Paper 
   open: 0
   show: 1
@@ -12,10 +22,10 @@ forums:
 
 - title: Aug. 2021 - Paper 
   open: 0
-  show: 1
+  show: 0
   url: https://openreview.net/group?id=JSYS/2021/Aug_Papers
 
 - title: Aug. 2021 - Artifact 
   open: 0
-  show: 1
+  show: 0
   url: https://openreview.net/group?id=JSYS/2021/Aug_Artifacts
