Change affiliation of repro chair

--- a/_data/areas/dataRepro/board.yml
+++ b/_data/areas/dataRepro/board.yml
@@ -3,9 +3,9 @@ area: Data Science and Reproducibility
 chairs:
 
 - name: Ivo Jimenez
-  affiliation: UC Santa Cruz
+  affiliation: Redpanda Data
   webpage: https://ivotron.me/
-  email: ivotron@ucsc.edu
+  email: ivotron@pm.me
   orcid: 0000-0002-2222-1985
   twitter: ivotron
 
