--- a/_data/areas/storage/cfp.yml
+++ b/_data/areas/storage/cfp.yml
@@ -1,16 +1,17 @@
 
 introduction:
 
-  - paragraph: The increasing need to process data closer to the storage as well as the growing demand for enhancing data privacy and protection raises new challenges and opportunities for near-data processing across various computing domains. Within this context, the “active storage” area of JSys welcomes a wide range of research contributions in all aspects of designing, implementing, and evaluating near-storage data processing architectures, system software, storage systems, programming abstractions, security, privacy, and data reduction and processing techniques.
+  - paragraph: The increasing need to process data faster as well as address the growing demand for enhancing data privacy and protection raises new challenges and opportunities for data storage across various computing domains. Within this context, the storage area of JSys welcomes a wide range of research contributions in all aspects of designing, implementing, and evaluating storage software, new architectures, programming abstractions, security, privacy, and data reduction and near-data processing techniques.
 
 topics:
 
-  - text: New algorithms and data reduction techniques for near-storage data processing
-  - text: Novel hardware architectures (e.g., FPGA-based) support for near-data processing in memory, storage, network, and accelerators
+
+  - text: New algorithms for data storage 
   - text: System software and application software including but-not-limited to key-value stores, databases, and file-system
+  - text: Novel hardware architectures (e.g., FPGA-based, DNA-based, Glass storage, near-memory and near-storage architectures) 
   - text: Topics related to the design and development of Computational Storage devices and architectures
-  - text: Security and privacy techniques focused on enhancing active storage
+  - text: Security and privacy techniques focused on enhancing storage
   - text: Techniques for handling data reliability
-  - text: Experimental evaluations and benchmarks for active storage systems
+  - text: Experimental evaluations and benchmarks for storage systems
   - text: Experiences, observations, and lessons learned from real-world deployments
   - text: Design and development of new programming abstractions and compilers
