Updating my affiliation and webpage

--- a/_data/areas/distConsensus/board.yml
+++ b/_data/areas/distConsensus/board.yml
@@ -3,8 +3,8 @@ area: Distributed Consensus
 chairs:
 
 - name: Heidi Howard
-  affiliation: University of Cambridge
-  webpage: https://hh360.user.srcf.net/blog/
+  affiliation: Microsoft
+  webpage: http://heidihoward.co.uk/
   email: heidi.howard@cl.cam.ac.uk
   orcid: 0000-0001-5256-7664
   twitter: heidiann360
